# Big-Data-Engineering

./: README.md
NewsRAG/: README.md  pyproject.toml
NewsRAG/newsrag/: .env  Home.py  Keyword_extraction_KeyBERT.ipynb  Topic_BERTopic.ipynb  Update_and_sync_databases.ipynb  rag.py
NewsRAG/newsrag/config/: database.py
NewsRAG/newsrag/data/: 2022_news_data_filtered_v1_p2.csv  keywords.csv  to_add.csv
NewsRAG/newsrag/functions/: logger.py  misc.py  vectorDB.py
NewsRAG/newsrag/pages/: analytics_page.py
NewsRAG/newsrag/pages/content/: barchart.html
Raccolta_Articoli/: NewsRAG_1.ipynb  NewsRAG_2.ipynb  NewsRAG_3.ipynb
